--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/color-string": "^1.5.0",
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.5.2",
     "@types/selenium-webdriver": "^3.0.10",
+    "color-string": "^1.5.3",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "tslint-language-service": "^0.9.9",
