--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "tslint -p .",
+    "prepack": "npm run build && npm run test && npm run lint",
     "test": "mocha test/",
     "test-debug": "mocha test/ -b --no-exit"
   },
