--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc",
     "lint": "tslint -p .",
     "prepack": "npm run build && npm run test && npm run lint",
-    "test": "mocha test/",
-    "test-debug": "mocha test/ -b --no-exit"
+    "test": "mocha 'test/**/*.{js,ts}'",
+    "test-debug": "mocha 'test/**/*.{js,ts}' -b --no-exit"
   },
   "files": [
     "dist",
@@ -34,22 +34,22 @@
   "dependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^2.40.0",
-    "geckodriver": "^1.11.0",
-    "mocha": "^5.2.0",
+    "chromedriver": "^74.0.0",
+    "geckodriver": "^1.16.2",
+    "mocha": "^6.1.4",
     "selenium-webdriver": "^4.0.0-alpha.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
     "@types/color-string": "^1.5.0",
-    "@types/mocha": "^5.2.4",
-    "@types/node": "^10.5.2",
-    "@types/selenium-webdriver": "^3.0.10",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.8",
+    "@types/selenium-webdriver": "^4.0.0",
     "color-string": "^1.5.3",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.10.0",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "tslint-language-service": "^0.9.9",
-    "typescript": "^3.1.6"
+    "typescript": "^3.4.5"
   }
 }
