Replace deprecated tslint-language-service with typescript-tslint-plugin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "rootDir": "lib",
     "module": "commonjs",
     "plugins": [{
-      "name": "tslint-language-service"
+      "name": "typescript-tslint-plugin"
     }]
   },
   "include": [
