--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "color-string": "^1.5.3",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
-    "tslint-language-service": "^0.9.9",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "typescript-tslint-plugin": "^0.3.1"
   }
 }
