With MOCHA_WEBDRIVER_IGNORE_CHROME_VERSION, allow mismatched chromedriver/chrome versions
Current chromedriver (v74) works with newer Chrome fine (with the
undocumented --disable-build-check flag which we are adding here).

Upgrading chromedriver to v75+, however, is annoying: it requires a new
selenium-webdriver version (without which headless option is broken),
and that in turns a requirement a very recent node version.

Note that chromedriver 2.43 works with latest Chrome (at least v76) fine
too, even without undocumented flags. But using something recent seems
better.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc",
     "lint": "tslint -p .",
     "prepack": "npm run build && npm run test && npm run lint",
-    "test": "MOCHA_WEBDRIVER_HEADLESS=1 MOCHA_WEBDRIVER_STACKTRACES=1 mocha 'test/**/*.{js,ts}'",
-    "test-debug": "mocha 'test/**/*.{js,ts}' -b --no-exit"
+    "test": "MOCHA_WEBDRIVER_HEADLESS=1 MOCHA_WEBDRIVER_STACKTRACES=1 MOCHA_WEBDRIVER_IGNORE_CHROME_VERSION=1 mocha 'test/**/*.{js,ts}'",
+    "test-debug": "MOCHA_WEBDRIVER_STACKTRACES=1 MOCHA_WEBDRIVER_IGNORE_CHROME_VERSION=1 mocha 'test/**/*.{js,ts}' -b --no-exit"
   },
   "files": [
     "dist",
