--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fs-extra": "^8.0.1",
     "geckodriver": "^1.16.2",
     "mocha": "^6.1.4",
+    "npm-run-path": "^3.1.0",
     "selenium-webdriver": "^4.0.0-alpha.1"
   },
   "devDependencies": {
