Update typescript dependency, and fix new errors with typings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
+    "useUnknownInCatchVariables": false,
     "declaration": true,
     "sourceMap": true,
     "outDir": "dist",
