--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mocha-webdriver",
-  "version": "0.2.13",
+  "version": "0.2.14",
   "description": "Write Mocha style tests using selenium-webdriver, with many conveniences.",
   "main": "dist/index",
   "typings": "dist/index",
@@ -35,23 +35,21 @@
   "dependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^74.0.0",
     "fs-extra": "^8.0.1",
-    "geckodriver": "^3.2.0",
-    "mocha": "^10.1.0",
+    "mocha": "^10.2.0",
     "npm-run-path": "^3.1.0",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "selenium-webdriver": "^4.11.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
     "@types/color-string": "^1.5.0",
     "@types/fs-extra": "^7.0.0",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.8",
-    "@types/selenium-webdriver": "^4.0.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.9",
+    "@types/selenium-webdriver": "^4.1.15",
     "color-string": "^1.5.3",
-    "ts-node": "^8.1.0",
+    "ts-node": "^10.9.1",
     "tslint": "^5.16.0",
     "typescript": "^4.8.4",
     "typescript-tslint-plugin": "^0.3.1"
